[gd_scene load_steps=4 format=3 uid="uid://bybf72esorfg6"]

[ext_resource type="Script" uid="uid://esr0hs1ogi0e" path="res://scenes/ui/game_screen.gd" id="1_r1vnj"]
[ext_resource type="AudioStream" uid="uid://dhnx0wwb5u8eu" path="res://assets/external/sfx/level-up-03-199576.mp3" id="3_gusqm"]
[ext_resource type="Theme" uid="uid://c0nrwxr7jl0j8" path="res://resources/font-only-theme.tres" id="7_c0p0g"]

[node name="game_screen" type="CanvasLayer" node_paths=PackedStringArray("exp_bar", "lbl_level", "health_bar", "lbl_timer", "lbl_counter", "lbl_fps", "collected_weapons", "collected_upgrades", "lbl_stats", "death_panel", "lbl_result", "level_up_panel", "lbl_level_up", "upgrade_options_container")]
script = ExtResource("1_r1vnj")
exp_bar = NodePath("Control/StatusDisplay/VBoxContainer/ExperienceBar")
lbl_level = NodePath("Control/StatusDisplay/VBoxContainer/ExperienceBar/LblLevel")
health_bar = NodePath("Control/StatusDisplay/HealthBar")
lbl_timer = NodePath("Control/StatusDisplay/VBoxContainer/VBoxContainer/LblTimer")
lbl_counter = NodePath("Control/StatusDisplay/VBoxContainer/VBoxContainer/LblCounter")
lbl_fps = NodePath("Control/StatusDisplay/VBoxContainer/VBoxContainer/LblFps")
collected_weapons = NodePath("Control/Inventory/VBoxContainer/CollectedWeapons")
collected_upgrades = NodePath("Control/Inventory/VBoxContainer/CollectedUpgrades")
lbl_stats = NodePath("Control/StatusDisplay/StatsLabel")
death_panel = NodePath("Control/Panels/DeathPanel")
lbl_result = NodePath("Control/Panels/DeathPanel/LblResult")
level_up_panel = NodePath("Control/Panels/LevelUp")
lbl_level_up = NodePath("Control/Panels/LevelUp/PanelContainer/MarginContainer/VBoxContainer/LblLevelUp")
upgrade_options_container = NodePath("Control/Panels/LevelUp/PanelContainer/MarginContainer/VBoxContainer/UpgradeOptions")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_c0p0g")

[node name="StatusDisplay" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/StatusDisplay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="ExperienceBar" type="ProgressBar" parent="Control/StatusDisplay/VBoxContainer"]
layout_mode = 2

[node name="LblLevel" type="Label" parent="Control/StatusDisplay/VBoxContainer/ExperienceBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -10.5
offset_bottom = 10.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "LV 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/StatusDisplay/VBoxContainer"]
layout_mode = 2

[node name="LblCounter" type="Label" parent="Control/StatusDisplay/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.956863, 0.921569, 1)
theme_override_font_sizes/font_size = 16
text = "Enemies:"
vertical_alignment = 1

[node name="LblTimer" type="Label" parent="Control/StatusDisplay/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.956863, 0.921569, 1)
theme_override_font_sizes/font_size = 16
text = "00:00"

[node name="LblFps" type="Label" parent="Control/StatusDisplay/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.956863, 0.921569, 1)
theme_override_font_sizes/font_size = 16
text = "60"

[node name="HealthBar" type="ProgressBar" parent="Control/StatusDisplay"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -27.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="StatsLabel" type="Label" parent="Control/StatusDisplay"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0

[node name="Inventory" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Inventory"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0

[node name="CollectedWeapons" type="GridContainer" parent="Control/Inventory/VBoxContainer"]
layout_mode = 2
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="Control/Inventory/VBoxContainer"]
layout_mode = 2
columns = 10

[node name="Panels" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelUp" type="Control" parent="Control/Panels"]
process_mode = 2
z_index = 1
anchors_preset = 0
offset_left = 1200.0
offset_top = 150.0
offset_right = 1400.0
offset_bottom = 400.00006

[node name="PanelContainer" type="PanelContainer" parent="Control/Panels/LevelUp"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 292.0
offset_bottom = 286.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Panels/LevelUp/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panels/LevelUp/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LblLevelUp" type="Label" parent="Control/Panels/LevelUp/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="Control/Panels/LevelUp/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SndLevelUp" type="AudioStreamPlayer" parent="Control/Panels/LevelUp/PanelContainer"]
stream = ExtResource("3_gusqm")

[node name="DeathPanel" type="Panel" parent="Control/Panels"]
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="LblResult" type="Label" parent="Control/Panels/DeathPanel"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme = ExtResource("7_c0p0g")
theme_override_font_sizes/font_size = 16
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1
